--- a/src/scss/components/_hero-wrapper.scss
+++ b/src/scss/components/_hero-wrapper.scss
@@ -62,11 +62,15 @@
             color: $white;
 
             @media (max-width:1300px) {
-                font-size: 130px;
+                font-size: 120px;
+            }
+
+            @media (max-width:1200px) {
+                font-size: 110px;
             }
 
             @media (max-width:991px) {
-                font-size: 100px;
+                font-size: 80px;
             }
 
             @media (max-width:767px) {
@@ -80,6 +84,14 @@
                 .d-flex{
                     display: block !important;
                 }
+            }
+
+            @media (max-width:420px) {
+                font-size: 43px;
+            }
+
+            @media (max-width:380px) {
+                font-size: 40px;
             }
         }
 
@@ -118,8 +130,8 @@
 
         .talk-animation{
             position: relative;
-            width: fit-content;
-            margin: 0 auto;
+            width: 171px;
+            margin: 0 25px;
             transition: all .3s;
 
             @media (max-width:991px) {
@@ -133,13 +145,19 @@
                 margin: 0 auto;
             }
 
+            @media (max-width:425px) {
+                max-width: 171px;
+                right: 0;
+                left: 0;
+            }
+
             img{
                 @media (max-width:1300px) {
                     max-width: 160px;
                 }
 
                 @media (max-width:991px) {
-                    max-width: 130px;
+                    max-width: 140px;
                 }
 
                 @media (max-width:767px) {
@@ -241,7 +259,7 @@
                 z-index: 8;
                 cursor: pointer;
 
-                @media (max-width:1300px) {
+                @media (max-width:1200px) {
                     right: -18px;
                     min-width: 130px;
                 }
@@ -259,7 +277,11 @@
                     min-width: 147px;
                     min-height: 38px;
                     bottom: -20px;
-                    right: 24px;
+                    right: 65px;
+                }
+
+                @media (max-width:425px) {
+                    right: -40px;
                 }
             }
 
