--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -1175,7 +1175,7 @@ footer .footer-main .footer-links__2 .links {
 }
 @media (max-width: 1200px) {
   .technologies-Wrapper.w-full {
-    margin: 70px auto;
+    margin: 100px auto;
     padding-bottom: 0;
   }
 }
@@ -1473,12 +1473,17 @@ footer .footer-main .footer-links__2 .links {
 }
 @media (max-width: 1300px) {
   .hero-wrapper .hero-wrapper__content___title {
-    font-size: 130px;
+    font-size: 120px;
+  }
+}
+@media (max-width: 1200px) {
+  .hero-wrapper .hero-wrapper__content___title {
+    font-size: 110px;
   }
 }
 @media (max-width: 991px) {
   .hero-wrapper .hero-wrapper__content___title {
-    font-size: 100px;
+    font-size: 80px;
   }
 }
 @media (max-width: 767px) {
@@ -1492,6 +1497,16 @@ footer .footer-main .footer-links__2 .links {
   }
   .hero-wrapper .hero-wrapper__content___title .d-flex {
     display: block !important;
+  }
+}
+@media (max-width: 420px) {
+  .hero-wrapper .hero-wrapper__content___title {
+    font-size: 43px;
+  }
+}
+@media (max-width: 380px) {
+  .hero-wrapper .hero-wrapper__content___title {
+    font-size: 40px;
   }
 }
 .hero-wrapper .hero-wrapper__content p {
@@ -1530,9 +1545,8 @@ footer .footer-main .footer-links__2 .links {
 }
 .hero-wrapper .hero-wrapper__content .talk-animation {
   position: relative;
-  width: -moz-fit-content;
-  width: fit-content;
-  margin: 0 auto;
+  width: 171px;
+  margin: 0 25px;
   transition: all 0.3s;
 }
 @media (max-width: 991px) {
@@ -1548,6 +1562,13 @@ footer .footer-main .footer-links__2 .links {
     margin: 0 auto;
   }
 }
+@media (max-width: 425px) {
+  .hero-wrapper .hero-wrapper__content .talk-animation {
+    max-width: 171px;
+    right: 0;
+    left: 0;
+  }
+}
 @media (max-width: 1300px) {
   .hero-wrapper .hero-wrapper__content .talk-animation img {
     max-width: 160px;
@@ -1555,7 +1576,7 @@ footer .footer-main .footer-links__2 .links {
 }
 @media (max-width: 991px) {
   .hero-wrapper .hero-wrapper__content .talk-animation img {
-    max-width: 130px;
+    max-width: 140px;
   }
 }
 @media (max-width: 767px) {
@@ -1644,7 +1665,7 @@ footer .footer-main .footer-links__2 .links {
   z-index: 8;
   cursor: pointer;
 }
-@media (max-width: 1300px) {
+@media (max-width: 1200px) {
   .hero-wrapper .hero-wrapper__content .talk-animation .animation-link {
     right: -18px;
     min-width: 130px;
@@ -1665,7 +1686,12 @@ footer .footer-main .footer-links__2 .links {
     min-width: 147px;
     min-height: 38px;
     bottom: -20px;
-    right: 24px;
+    right: 65px;
+  }
+}
+@media (max-width: 425px) {
+  .hero-wrapper .hero-wrapper__content .talk-animation .animation-link {
+    right: -40px;
   }
 }
 .hero-wrapper .hero-wrapper__content .talk-animation:hover .animation-link {
@@ -2002,11 +2028,6 @@ footer .footer-main .footer-links__2 .links {
     margin: 100px auto 20px auto;
   }
 }
-@media (max-width: 991px) {
-  .blogs-listing-wrapper {
-    margin: 70px auto 20px auto;
-  }
-}
 .blogs-listing-wrapper .title-block {
   margin-bottom: 100px;
 }
@@ -2176,7 +2197,7 @@ footer .footer-main .footer-links__2 .links {
 @media (max-width: 991px) {
   .testimonial-wrapper {
     padding: 0;
-    margin: 70px auto !important;
+    margin: 100px auto !important;
   }
 }
 .testimonial-wrapper__bgsvg {
@@ -2489,7 +2510,7 @@ footer .footer-main .footer-links__2 .links {
 @media (max-width: 991px) {
   .why-choose-us-wrapper {
     padding: 0;
-    margin: 70px auto !important;
+    margin: 100px auto !important;
   }
 }
 .why-choose-us-wrapper .d-grid {
@@ -2840,11 +2861,6 @@ footer .footer-main .footer-links__2 .links {
   z-index: 7;
   position: relative;
 }
-@media (max-width: 767px) {
-  .aboutus-square-wrapper {
-    margin: 70px auto;
-  }
-}
 .aboutus-square-wrapper .d-grid {
   grid-template-columns: repeat(2, 1fr);
   gap: 20px;
@@ -3059,7 +3075,7 @@ footer .footer-main .footer-links__2 .links {
 }
 @media (max-width: 767px) {
   .vision-mission-wrapper {
-    margin: 70px auto;
+    margin: 100px auto;
   }
 }
 .vision-mission-wrapper .d-flex {
@@ -3830,7 +3846,6 @@ footer .footer-main .footer-links__2 .links {
 @media (max-width: 991px) {
   .faq-wrapper {
     padding: 0 20px;
-    margin: 70px auto;
   }
 }
 .faq-wrapper .d-grid {
@@ -3993,7 +4008,7 @@ footer .footer-main .footer-links__2 .links {
 }
 @media (max-width: 991px) {
   .brand-guidelines-wrapper .points {
-    margin: 70px auto;
+    margin: 100px auto;
   }
 }
 .brand-guidelines-wrapper .points-list {
@@ -4593,7 +4608,6 @@ footer .footer-main .footer-links__2 .links {
 }
 @media (max-width: 991px) {
   .service-detail-wrapper .box-items.grid-1, .services-content-wrapper .box-items.grid-1 {
-    margin: 70px auto;
     gap: 15px;
   }
 }
@@ -4678,7 +4692,7 @@ footer .footer-main .footer-links__2 .links {
 }
 @media (max-width: 767px) {
   .service-detail-wrapper .box-items.version-2, .service-detail-wrapper .box-items.version-3, .services-content-wrapper .box-items.version-2, .services-content-wrapper .box-items.version-3 {
-    margin: 30px auto 70px auto;
+    margin: 30px auto 100px auto;
   }
 }
 .service-detail-wrapper .box-items.version-2 .grid-2, .service-detail-wrapper .box-items.version-3 .grid-2, .services-content-wrapper .box-items.version-2 .grid-2, .services-content-wrapper .box-items.version-3 .grid-2 {
@@ -4772,11 +4786,6 @@ footer .footer-main .footer-links__2 .links {
     margin: 100px auto;
   }
 }
-@media (max-width: 991px) {
-  .service-detail-wrapper .box-items.version-3, .services-content-wrapper .box-items.version-3 {
-    margin: 70px auto;
-  }
-}
 .service-detail-wrapper .box-items.version-3 .why-looking__bgsvg, .services-content-wrapper .box-items.version-3 .why-looking__bgsvg {
   position: absolute;
   right: 0;
@@ -4815,11 +4824,6 @@ footer .footer-main .footer-links__2 .links {
 .service-detail-wrapper .box-items-2, .services-content-wrapper .box-items-2 {
   margin: 100px auto;
   position: relative;
-}
-@media (max-width: 991px) {
-  .service-detail-wrapper .box-items-2, .services-content-wrapper .box-items-2 {
-    margin: 70px auto;
-  }
 }
 @media (max-width: 767px) {
   .service-detail-wrapper .box-items-2, .services-content-wrapper .box-items-2 {
@@ -4923,7 +4927,6 @@ footer .footer-main .footer-links__2 .links {
 @media (max-width: 991px) {
   .service-detail-wrapper .cta-wrapper, .services-content-wrapper .cta-wrapper {
     min-height: 500px;
-    margin: 70px auto;
   }
 }
 @media (max-width: 767px) {
@@ -4966,7 +4969,7 @@ footer .footer-main .footer-links__2 .links {
 }
 @media (max-width: 991px) {
   .service-detail-wrapper .why-choose-wrapper, .services-content-wrapper .why-choose-wrapper {
-    margin: 70px auto 10px auto;
+    margin: 100px auto 10px auto;
   }
 }
 .service-detail-wrapper .why-choose-wrapper__bgsvg, .services-content-wrapper .why-choose-wrapper__bgsvg {
@@ -5276,11 +5279,6 @@ footer .footer-main .footer-links__2 .links {
     margin: 100px auto;
   }
 }
-@media (max-width: 991px) {
-  .services-content-wrapper .resources-wrapper {
-    margin: 70px auto;
-  }
-}
 @media (max-width: 767px) {
   .services-content-wrapper .resources-wrapper {
     margin: 100px auto;
@@ -5393,11 +5391,6 @@ footer .footer-main .footer-links__2 .links {
 @media (max-width: 1400px) {
   .services-content-wrapper .content-small-wrapper {
     margin: 100px auto;
-  }
-}
-@media (max-width: 991px) {
-  .services-content-wrapper .content-small-wrapper {
-    margin: 70px auto;
   }
 }
 @media (max-width: 767px) {
@@ -5514,7 +5507,6 @@ footer .footer-main .footer-links__2 .links {
 }
 @media (max-width: 991px) {
   .services-content-wrapper .development-process-wrapper {
-    margin: 70px auto;
     max-width: 100%;
   }
 }
@@ -6244,11 +6236,6 @@ footer .footer-main .footer-links__2 .links {
     margin: 100px auto;
   }
 }
-@media (max-width: 991px) {
-  .services-content-wrapper .methodology-wrapper {
-    margin: 70px auto;
-  }
-}
 @media (max-width: 767px) {
   .services-content-wrapper .methodology-wrapper .d-flex {
     flex-direction: column;
@@ -6292,6 +6279,89 @@ footer .footer-main .footer-links__2 .links {
   .services-content-wrapper .methodology-wrapper__img {
     margin-left: 0;
     margin-top: 25px;
+  }
+}
+.services-content-wrapper .logo-listing-wrapper {
+  margin: 150px auto;
+}
+@media (max-width: 1200px) {
+  .services-content-wrapper .logo-listing-wrapper {
+    margin: 100px auto;
+  }
+}
+.services-content-wrapper .logo-listing-wrapper .logo-list {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  margin-top: 50px;
+  gap: 20px;
+}
+@media (max-width: 991px) {
+  .services-content-wrapper .logo-listing-wrapper .logo-list {
+    gap: 15px;
+  }
+}
+@media (max-width: 767px) {
+  .services-content-wrapper .logo-listing-wrapper .logo-list {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media (max-width: 575px) {
+  .services-content-wrapper .logo-listing-wrapper .logo-list {
+    grid-template-columns: repeat(2, 1fr);
+    margin-top: 30px;
+  }
+}
+.services-content-wrapper .logo-listing-wrapper .logo-list .logo {
+  text-align: center;
+  background-color: #181818;
+  border-radius: 30px;
+  min-height: 230px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 5px;
+}
+@media (max-width: 1200px) {
+  .services-content-wrapper .logo-listing-wrapper .logo-list .logo {
+    min-height: 200px;
+  }
+}
+@media (max-width: 991px) {
+  .services-content-wrapper .logo-listing-wrapper .logo-list .logo {
+    border-radius: 15px;
+  }
+}
+@media (max-width: 575px) {
+  .services-content-wrapper .logo-listing-wrapper .logo-list .logo {
+    min-height: 133px;
+  }
+}
+.services-content-wrapper .logo-listing-wrapper .logo-list .logo img {
+  width: 100px;
+  height: auto;
+}
+@media (max-width: 1200px) {
+  .services-content-wrapper .logo-listing-wrapper .logo-list .logo img {
+    width: 80px;
+  }
+}
+@media (max-width: 575px) {
+  .services-content-wrapper .logo-listing-wrapper .logo-list .logo img {
+    width: 60px;
+  }
+}
+.services-content-wrapper .logo-listing-wrapper .logo-list .logo h5 {
+  margin-top: 30px;
+  margin-bottom: 0;
+  font-weight: 300;
+}
+@media (max-width: 575px) {
+  .services-content-wrapper .logo-listing-wrapper .logo-list .logo h5 {
+    font-size: 18px;
+    line-height: normal;
+    margin-top: 20px;
   }
 }
 
